examples/gitops/argocd/yamls/tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - tls.eks-blueprints.jpearnest.com
    secretName: quickstart-example-tls
  rules:
  - host: tls.eks-blueprints.jpearnest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
# need to configure dns solver for letsencypt issuer first
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: wildcard-tls-certificate
#   namespace: default
# spec:
#   dnsNames:
#   - '*.eks-blueprints.jpearnest.com'
#   issuerRef:
#     group: cert-manager.io
#     kind: ClusterIssuer
#     name: letsencrypt-prod
#   secretName: wildcard-tls-certificate
#   usages:
#   - digital signature
#   - key encipherment
